[package]
name = "ante-market"
version = "0.1.0"
description = "ANTE — verifiable settlement for World Cup prediction markets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ante_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
solana-sha256-hasher = "2.3.0"
